# rules_proto

./: MODULE.bazel  WORKSPACE.bzlmod
plugin/stephenh/ts-proto/: BUILD.bazel
