load("@build_stack_rules_proto//rules:proto_plugin.bzl", "proto_plugin")

proto_plugin(
    name = "protoc-gen-ts-proto",
    tool = ":ts-proto",
    visibility = ["//visibility:public"],
)

alias(
    name = "ts-proto",
    actual = "@npm_ts_proto//ts-proto/bin:protoc-gen-ts_proto",
)

filegroup(
    name = "all_files",
    srcs = [
        "BUILD.bazel",
        "package.json",
        "package-lock.json",
    ],
    visibility = ["//plugin:__pkg__"],
)
